--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -6,7 +6,8 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    tools:context=".MainActivity"
     android:orientation="vertical">
 
     <ListView
@@ -16,20 +17,10 @@
         android:layout_weight="1">
     </ListView>
 
-    <LinearLayout
-        android:layout_width="match_parent"
+    <EditText
+        android:id="@+id/todoText"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:layout_gravity="bottom">
-        <EditText
-            android:id="@+id/todoText"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"/>
-        <Button
-            android:id="@+id/addButton"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:text="Add New Item"/>
-    </LinearLayout>
-
+        android:visibility="invisible"
+        android:layout_gravity="bottom"/>
 </LinearLayout>
