fixed EditText in content_main to only allow 1 line and enter the Text

--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -22,5 +22,6 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:visibility="invisible"
-        android:layout_gravity="bottom"/>
+        android:layout_gravity="bottom"
+        android:singleLine="true"/>
 </LinearLayout>
