--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingLeft="@dimen/activity_horizontal_margin"
@@ -11,17 +10,24 @@
     tools:context=".MainActivity"
     android:orientation="vertical">
 
-    <ListView
+    <!--<ListView
         android:id="@+id/listView"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1" />
+        android:layout_weight="1" />-->
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/rv"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_weight="1"/>
 
     <EditText
-        android:id="@+id/todoText"
+        android:id="@+id/add_note"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:visibility="invisible"
         android:layout_gravity="bottom"
-        android:singleLine="true"/>
+        android:maxLines="1"
+        android:inputType="text"/>
 </LinearLayout>
