put recyclerview into a fragment

--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -10,24 +10,9 @@
     tools:context=".MainActivity"
     android:orientation="vertical">
 
-    <!--<ListView
-        android:id="@+id/listView"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1" />-->
-
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/rv"
+    <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_weight="1"/>
+        android:id="@+id/container"/>
 
-    <EditText
-        android:id="@+id/add_note"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:visibility="invisible"
-        android:layout_gravity="bottom"
-        android:maxLines="1"
-        android:inputType="text"/>
 </LinearLayout>
