--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -27,4 +28,4 @@
         android:layout_margin="@dimen/fab_margin"
         android:src="@drawable/ic_add_circle_outline_black_48dp" />
 
-</LinearLayout>
+</android.support.design.widget.CoordinatorLayout>
