added dialog fragment for adding notes

--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -26,6 +26,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
         android:layout_margin="@dimen/fab_margin"
-        android:src="@drawable/ic_add_circle_outline_black_48dp" />
+        android:onClick="showAddNoteDialog"
+        android:src="@drawable/icon_add" />
 
 </android.support.design.widget.CoordinatorLayout>
