--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -6,5 +6,6 @@
     <dimen name="widget_margin">8dp</dimen>
 
     <!-- Default text sizes -->
-    <dimen name="note_text">20dp</dimen>
+    <dimen name="note_text">22sp</dimen>
+    <dimen name="timestamp_text">12sp</dimen>
 </resources>
